# cv-parser-ai

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/api/routers/: parse.py
app/core/: app_config.py
